--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Ignore Python virtual environment
+venv/
+__pycache__/
+*.pyc
+
+# Ignore environment variables
+.env
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
